<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/or"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RadioGroupDifficulty" />

            <TextView
                android:id="@+id/game_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-black"
                android:includeFontPadding="true"
                android:text="@string/game_name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#DF4A7A"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewBestGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/best_time_"
                app:layout_constraintEnd_toEndOf="@+id/game_name"
                app:layout_constraintStart_toStartOf="@+id/game_name"
                app:layout_constraintTop_toBottomOf="@+id/game_name" />

            <TextView
                android:id="@+id/textViewLastGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/last_game_time"
                app:layout_constraintEnd_toEndOf="@+id/textViewBestGameTime"
                app:layout_constraintStart_toStartOf="@+id/textViewBestGameTime"
                app:layout_constraintTop_toBottomOf="@+id/textViewBestGameTime" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/select_difficulty"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewLastGameTime"
                app:layout_constraintStart_toStartOf="@+id/textViewLastGameTime"
                app:layout_constraintTop_toBottomOf="@+id/textViewLastGameTime" />

            <RadioGroup
                android:id="@+id/RadioGroupDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/radioButtonEasy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="GetDifficulty"
                    android:text="@string/easy" />

                <RadioButton
                    android:id="@+id/radioButtonMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="GetDifficulty"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/radioButtonHard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="GetDifficulty"
                    android:text="@string/hard" />
            </RadioGroup>

            <Button
                android:id="@+id/button_custom_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:includeFontPadding="true"
                android:text="@string/make_a_custom_board"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or" />

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button_custom_board"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="@+id/button_custom_board"
                app:layout_constraintTop_toBottomOf="@+id/button_custom_board" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>